style: Header & ErrorPage components

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 :root {
-  max-width: 1280px;
   font-family: "Roboto", sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -59,9 +58,15 @@ li {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 #root,
 #__next {
   isolation: isolate;
+}
+
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
 }
