feat(cart): Update cart quantities and add products
Style Card.jsx and Products.jsx

Feature
- Implemented `handleClick` function in `Card` component to handle adding
 products to the cart.
- If a product already exists in the cart, the quantity is updated.
- If a product does not exist, it is added to the cart.
- Reset quantity input to 0 after adding to the cart.
- Utilized `useOutletContext` to access and update the cart state.
- Added `handleChange` function to manage the quantity input.

This ensures that when the user clicks the "Add to Cart" button, the cart
is updated correctly with either new products or updated quantities of
existing products.

--- a/src/components/Products/Products.module.css
+++ b/src/components/Products/Products.module.css
@@ -110,3 +110,10 @@
     transform: scaleY(-1) rotate(-135deg);
   }
 }
+
+.cardContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2em; /* Space between cards */
+  padding: 1em; /* Optional: padding around the container */
+}
