--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -42,7 +42,8 @@
 }
 
 .deleteBtn:hover,
-.checkOutBtn:hover {
+.checkOutBtn:hover,
+.emptyCartBtn:hover {
   background-color: rgb(143, 24, 28);
 }
 
@@ -57,4 +58,20 @@
   display: flex;
   justify-content: flex-end;
   font-size: 1.5em;
+}
+
+.emptyCartContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.emptyCartText {
+  font-size: 3rem;
+}
+
+.emptyCartBtn {
+  composes: checkOutBtn;
+  width: 100%;
 }
